--- a/tasks/ksp/task2.tex
+++ b/tasks/ksp/task2.tex
@@ -24,8 +24,7 @@ peňazí Zygro ušetrí, ak za výrobok zaplatí vyššie popísaným spôsobom.
 
 V prvom riadku vstupu je jediné číslo $n$ ($0 \leq n \leq 10^{18}$) udávajúce cenu. 
 Všimnite si, že $n$ sa nezmestí do bežnej (32-bitovej) celočíselnej premennej.
-Pokiaľ programujete v Pascale, odporúčame vám použiť typ `int64`, v C++ typ `long
-long`.
+Pokiaľ programujete v Pascale, odporúčame vám použiť typ \texttt{int64}, v C++ typ \texttt{long long}.
 
 \subsubsection{Formát výstupu}
 
