This and that, I don't really know

--- a/custom.tex
+++ b/custom.tex
@@ -48,7 +48,8 @@
     \fancyhf{}
     \fancyhead[L]{    
         \begin{minipage}{0.3\textwidth}
-            \includegraphics[width = \linewidth]{logo/\seminarID-logo.pdf}\\[-10pt]
+            \centering
+            \includegraphics[height = 22mm]{logo/\seminarID-logo.pdf}\\[0pt]
         \end{minipage}
     }
     
