Catching up with old shit

--- a/custom.tex
+++ b/custom.tex
@@ -31,7 +31,7 @@
     nolistsep
 }
 
-\renewcommand{\arraystretch}{1.4}
+\renewcommand{\arraystretch}{1.2}
 \renewcommand{\textfloatsep}{3mm}
 
 % fancyhdr -- fancy pagestyle
@@ -58,7 +58,7 @@
             \centering
             {\Large \seminarFull}\\[2pt]
             {\large \romanNumeral{\currentContestYear}. ročník, \currentAcademicYear}\\[6pt]            
-            {\seminarShort,\ \seminarDepartmentShort\ FMFI~UK, Mlynská dolina, 842 48 Bratislava}\\[0pt]
+            {\seminarShort,\ \seminarDepartmentShort\ FMFI~UK, Mlynská dolina, 842~48 Bratislava}\\[0pt]
             {web:\quad\texttt{\seminarURL} \hspace{40pt} e-mail:\quad\texttt{\seminarEmail}}\\[8pt]
             \vspace{0pt}
         \end{minipage}        
