--- a/tasks/ksp/task1.tex
+++ b/tasks/ksp/task1.tex
@@ -35,7 +35,7 @@ Vstupy sú rozdelené do sád podľa obtiažnosti, za každú sadu sa dá získa
 
 \begin{table}[ht]
     \begin{center}
-        \begin{tabular}{@{\extracolsep{\fill} } l *{6}{r} @{}}
+        \begin{tabular*}{0.8\textwidth}{@{\extracolsep{\fill}} l *{6}{r} @{\extracolsep{\fill}}}
             \toprule
                 \textbf{Sada} & 1 & 2 & 3 & 4 & 5 & 6 \\
             \midrule
@@ -43,7 +43,7 @@ Vstupy sú rozdelené do sád podľa obtiažnosti, za každú sadu sa dá získa
                 \textbf{Maximálna cena}      & 100 & 100 & 1 000 & 1 000 & 10 000 &  10 000 \\
                 \textbf{Maximálna kapacita}  & 100 & 100 & 1 000 & 1 000 & 10 000 &  10 000 \\
             \bottomrule
-        \end{tabular}
+        \end{tabular*}
     \end{center}
 \end{table}
 
