--- a/current.tex
+++ b/current.tex
@@ -1,4 +1,4 @@
-\loadSeminar{fks}
+\loadSeminar{ksp}
 \RenewDocumentCommand{\currentYear}{}{2015}
 \RenewDocumentCommand{\currentPart}{}{1}
 \RenewDocumentCommand{\currentSeries}{}{2}
