--- a/trojsten.sty
+++ b/trojsten.sty
@@ -185,7 +185,7 @@
         \vspace{-15pt}                                              % one nasty hack here       
         \fbox{
             \begin{minipage}[t]{\linewidth}
-                \mbox{}\\[-1.5\baselineskip]                                    % another nasty hack here
+                \mbox{}\\[-1.5\baselineskip]                        % another nasty hack here
                 \ttfamily
                 \l_tmpa_tl
             \end{minipage}
@@ -201,12 +201,12 @@
         \vspace{-15pt}                                              % guess what here
         \fbox{
             \begin{minipage}[t]{0.975\linewidth}
-                \mbox{}\\[-1.5\baselineskip]                                    % and one nasty hack here
+                \mbox{}\\[-1.5\baselineskip]                        % and one nasty hack here
                 \ttfamily
                 \l_tmpb_tl
             \end{minipage}
         }
-    \end{minipage}
+    \end{minipage}d
     \\[1ex]
 }
 \char_set_catcode_end_line:n{`\^^M}
@@ -217,7 +217,7 @@
 \endinput                                                   % everything below is safely ignored
 
 KNOWN ISSUES:
-\num{0.5} typesets a nasty comma
+\num{0.5} typesets an ugly tall comma
 
 
 
