--- a/tasks/ksp/task1.tex
+++ b/tasks/ksp/task1.tex
@@ -19,7 +19,7 @@ používa len celé čísla. Najlepšie bude, ak nebudete vôbec nikde deliť.
 \subsubsection{Formát vstupu}
 
 V~prvom riadku vstupu je kladné číslo $n$ udávajúce počet diskov.
-Vkaždom znasledujúcich $n$ riadkov sú celé čísla $c$ a~$k$ udávajúce cenu (v~eurách)
+V~každom z~nasledujúcich $n$ riadkov sú celé čísla $c$ a~$k$ udávajúce cenu (v~eurách)
 a~kapacitu (v~gigabajtoch) daného disku.
 
 \subsubsection{Formát výstupu}
