--- a/trojsten.sty
+++ b/trojsten.sty
@@ -61,8 +61,6 @@
 }
 
 \RequirePackage{fancyhdr}                                   % fancy header
-\renewcommand{\headrulewidth}{0.4pt}
-\renewcommand{\footrulewidth}{0.4pt}
 
 \RequirePackage[all]{nowidow}
 
@@ -234,7 +232,7 @@
                 \l_tmpb_tl
             \end{minipage}
         }
-    \end{minipage}d
+    \end{minipage}
     \\[1ex]
 }
 \char_set_catcode_end_line:n{`\^^M}
@@ -242,7 +240,7 @@
 
 
 
-\endinput                                                   % everything below is safely ignored
+\endinput                                                           % everything below is safely ignored
 
 KNOWN ISSUES:
 \num{0.5} typesets an ugly tall comma
