--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is DGS, short form Trojsten Document Generation System (pronounce "degeš").
+This is DGS, short for Trojsten Document Generation System (pronounced "degeš").
