--- a/files/fks/solutions/task2.tex
+++ b/files/fks/solutions/task2.tex
@@ -1,4 +1,4 @@
-\createSolutionHeader[Vážna úvaha][Vladko][Vladko]
+\createSolutionHeader[Štafetová cyklovačka][Vladko][Vladko]
 Aby sme rozhodli, ktorá z~navrhovaných taktík je lepšia, vypočítame si, aký čas $t$ by trvalo prejdenie celej trate $s$ aplikovaním jednotlivých taktík.
 Ak Enka bicykluje rýchlosťou $v_{\mathrm{E}}$, tak za čas $t_{\mathrm{E}} = t/2$ prejde úsek dlhý $s_{\mathrm{E}}$.
 Analogicky platí pre Kvíkovo $v_{\mathrm{K}}$, $t_{\mathrm{K}}$ a $s_{\mathrm{K}}$ to isté. Môžeme teda napísať:
@@ -24,8 +24,3 @@ Najlepší čas dosiahnu, keď celé preteky bude bicyklovať len Kvík a Enka h
 Tento čas pre $s_{\mathrm{E}}=0$ bude približne jedna hodina a sedemnásť minút.
 Výsledná taktika by nás nemala prekvapiť. Nakoľko obaja cyklisti majú konštantnú rýchlosť (neunavujú sa) a~Kvík je rýchlejší, mali by sme ho nasadiť na celú dĺžku pretekov.
 
-\LaTeX{} -- ,,degeš?``
-
-\uv{degeš}
-
-,,degeš!``
