--- a/files/fks/solutions/task7.tex
+++ b/files/fks/solutions/task7.tex
@@ -1,4 +1,4 @@
-%Nastavte si prosím kódovanie UTF-8 NOBOMB a unixové konce riadkov
+\createSolutionHeader[Nezelené hviezdy][Maťo B][Maťo B]
 Predtým, než si zodpovieme otázku zo zadania, si vyjasnime, čo je to vlastne \emph{farba}. 
 
 \emph{Farba} je čisto subjektívny pocit a interpretácia svetla istej vlnovej dĺžky našim okom a mozgom.
@@ -19,8 +19,8 @@ Hviezda by totiž musela mať naozaj \emph{veľmi exotické} zloženie, aby to b
 %Obrázok nemá žiadne podmienky, takže je to legal :)
 %[Kvík] Tuším celá wikimedia obsahuje iba free obrázky... ale isté si nie som.
 
-\obrazok{0.5}{pr7b.eps}{Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka. Obrázok je prepožičaný z~\protect\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}{fraunhoferlines}{H}
-% \footnote{Obrázok prepožičaný z~\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}}.
+%\obrazok{0.5}{pr7b.eps}{Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.
+%Obrázok je prepožičaný z~\protect\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}{fraunhoferlines}{H}
 
 
 Žiarenie absolútne čierneho telesa sa riadi tzv. \emph{Planckovým vyžarovacím zákonom}\footnote{\url{https://en.wikipedia.org/wiki/Planck\%27s_law}}.
@@ -51,18 +51,18 @@ Môžeme použiť buď tento obrázok\footnote{\url{https://upload.wikimedia.org
 %[Kvík] Obrázok asi treba aj vložiť
 % [planckian locus]{Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.}
 %Opäť legal for any use :)
-\obrazok{0.4}{pr7.eps}{Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.}{planckianlocus}{H}
+%\obrazok{0.4}{pr7.eps}{Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.}{planckianlocus}{H}
 
-\hspace{-0.7cm} alebo si to skúsime sami vypočítať. Na to, aby sme to vypočítali, však musíme vedieť, ako presne sú naše čapíky citlivé na svetlo rôznych vlnových dĺžok.
-Našťastie nemusíme dlho hladať, pretože ak sa trošku posnažíme, dopátrame sa k~tzv. \emph{CIE color matching functions}\footnote{\url{https://en.wikipedia.org/wiki/CIE_1931_color_space#Color_matching_functions}},
+alebo si to skúsime sami vypočítať. Na to, aby sme to vypočítali, však musíme vedieť, ako presne sú naše čapíky citlivé na svetlo rôznych vlnových dĺžok.
+Našťastie nemusíme dlho hladať, pretože ak sa trošku posnažíme, dopátrame sa k~tzv. \emph{CIE color matching functions}\footnote{\url{https://en.wikipedia.org/wiki/CIE_1931_color_space(MRIEŽKA) Color_matching_functions}},
 čo sú štandardizované citlivosti čapíkov na rôzne vlnové dlžky. Samotné tabuľky $x$, $y$ a $z$ funkcií možno nájsť napríklad tu\footnote{\url{http://cvrl.ioo.ucl.ac.uk/cmfs.htm}}.
 
 Stačí si teda otvoriť tabuľkový procesor, nakopírovať si tabuľky $x$, $y$ a $z$ funkcií (napr. po $\SI{0.1}{\nano\metre}$), prenásobiť vo viditeľnom spektre spektrom
 absolútne čierneho telesa teploty $T \approx \SI{5470}{\kelvin}$ a následne sčítať po malých kúskoch (napr. po $\SI{0.1}{\nano\metre}$)
-(viď článok o~\emph{Color matching functions}).\footnote{Ak vám táto myšlienka ščitovanie po malých kúskoch nie je jasná,
+(viď článok o~\emph{Color matching functions}).\footnote{Ak vám táto myšlienka sčitovania po malých kúskoch nie je jasná,
 odporúčame si prečítať v~Archive FKS vzorák k~úlohe Vlnitá panoráma z~29. ročníka.} Nakoniec už len nájsť spôsob ako čísla \emph{color functions} $X$, $Y$ a $Z$ prepočítať na RGB farbu. 
 
-Iný spôsob bol priamo nájsť približné vzťahy\footnote{\url{https://en.wikipedia.org/wiki/Planckian_locus#Approximation}} na výpočet $X$ a $Y$ súradníc v~$CEI$ farebnom spektre priamo z~teploty a potom prepočítať na RGB farbu.
+Iný spôsob bol priamo nájsť približné vzťahy\footnote{\url{https://en.wikipedia.org/wiki/Planckian_locus(MRIEŽKA)Approximation}} na výpočet $X$ a $Y$ súradníc v~$CEI$ farebnom spektre priamo z~teploty a potom prepočítať na RGB farbu.
 
 Či už zvolíme prvý alebo druhý spôsob, dopátrame sa k~skoro čisto bielej farbe\footnote{[0.333,0.342] v~CEI 1931 Color space}.
 \uv{Zelené hviezdy} sú teda v~skutočnosti biele. Pravdou je, že v~tom obrovskom množstve hviezd sa môže nachádzať zopár hviezd s~takým exotickým zložením,že vďaka absorbčnému a emisnému spektru prvkov, z~ktorých sa bude skladať, sa nám bude zdať zelená, no žiadnu sme doteraz nenašli. Ak len predsa len narazíte na nejaký obrázok či fotku v~hviezdy v~zelenej farbe, napr. na stránke NASA, ide o~počítačovo upravenú fotku s~umelými farbami.
