More files added to test solutions build

--- a/custom.tex
+++ b/custom.tex
@@ -16,6 +16,7 @@
 \setlength{\belowdisplayshortskip}{0mm}
 \setlength{\itemindent}{0pt}
 \setlength{\textfloatsep}{0mm}
+\setlength{\LTcapwidth}{0.8\textwidth}
 
 \setlist[description]{
     style           = multiline,
