--- a/files/fks/solutions/task7.tex
+++ b/files/fks/solutions/task7.tex
@@ -15,13 +15,9 @@ elektrónov medzi rôznymi energetickými hladinami v~atómoch a molekulách, kt
 Aj keby sme prítomnosť spektrálnych čiar uvažovali, na výsledok by to nemalo veľký vplyv.
 Hviezda by totiž musela mať naozaj \emph{veľmi exotické} zloženie, aby to bolo dôvod na to, že ju vidíme zelenú. 
 
-%[Fraunhofer_lines.svg]{Obrázok \emph{Fraunhoferových čiar}, spektrálnych čiar v~spektre Slnka.\footnote{Obrázok prepožičaný z~\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}}.}
-%Obrázok nemá žiadne podmienky, takže je to legal :)
-%[Kvík] Tuším celá wikimedia obsahuje iba free obrázky... ale isté si nie som.
-
-%\obrazok{0.5}{pr7b.eps}{Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.
-%Obrázok je prepožičaný z~\protect\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}{fraunhoferlines}{H}
-
+\Picture{fraunhofer.pdf}{3cm}[Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.%
+%\footnote{Obrázok je prepožičaný z~\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}
+][fraunhofer]
 
 Žiarenie absolútne čierneho telesa sa riadi tzv. \emph{Planckovým vyžarovacím zákonom}\footnote{\url{https://en.wikipedia.org/wiki/Planck\%27s_law}}.
 Ten nám hovorí, koľko elektromagnetického žiarenia vyžaruje absolútne čierne teleso pri určitej teplote. 
@@ -48,10 +44,7 @@ Toto je dôvod, prečo astronómovia nepozorujú zelené hviezdy.\footnote{V sku
 Už vieme, prečo nie sú hviezdy zelené, no musíme ešte zistiť, akú farbu majú vlastne hviezdy, ktoré by \uv{mali byť zelené}.
 Môžeme použiť buď tento obrázok\footnote{\url{https://upload.wikimedia.org/wikipedia/commons/b/ba/PlanckianLocus.png}}
 
-%[Kvík] Obrázok asi treba aj vložiť
-% [planckian locus]{Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.}
-%Opäť legal for any use :)
-%\obrazok{0.4}{pr7.eps}{Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.}{planckianlocus}{H}
+\Picture{planck.png}{6cm}[Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.][planck]
 
 alebo si to skúsime sami vypočítať. Na to, aby sme to vypočítali, však musíme vedieť, ako presne sú naše čapíky citlivé na svetlo rôznych vlnových dĺžok.
 Našťastie nemusíme dlho hladať, pretože ak sa trošku posnažíme, dopátrame sa k~tzv. \emph{CIE color matching functions}\footnote{\url{https://en.wikipedia.org/wiki/CIE_1931_color_space(MRIEŽKA) Color_matching_functions}},
